# maurice

./: Makefile  docker-compose.yaml  setup.sh
functions/: function_schemas.json
server/: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  build.rs  diesel.toml
server/migrations/2024-08-26-152340_create_content_and_message_tables/: down.sql  up.sql
server/src/: logger.rs  main.rs  model.rs  schema.rs
server/src/function_routes/: add_function_routes.rs  get_loaded_model_name.rs  list_chat_models.rs  load_model.rs  mod.rs  send_chat.rs
server/src/function_types/: mod.rs  python_util.rs
server/src/procedures/: append_song_to_playlist.rs  create_directory.rs  create_file.rs  delete_file.rs  delete_folder.rs  edit_file.rs  get_audio_devices.rs  get_playlist.rs  get_song_duration.rs  get_song_time.rs  get_speakers.rs  get_volume.rs  get_youtube_videos.rs  list_files.rs  list_files_and_directories.rs  mod.rs  next_song.rs  pause.rs  play_audio.rs  refresh_speakers.rs  remove_song_from_playlist_at_index.rs  resume.rs  set_song_time.rs  set_volume.rs  stop.rs
server/src/routes/: append_song_to_playlist.rs  create_directory.rs  create_file.rs  delete_file.rs  delete_folder.rs  edit_file.rs  get_history.rs  get_playlist.rs  get_song_duration.rs  get_song_time.rs  get_speakers.rs  get_volume.rs  get_youtube_videos.rs  is_locked.rs  list_files.rs  list_files_and_directories.rs  mod.rs  pause.rs  play_audio.rs  remove_song_from_playlist_at_index.rs  resume.rs  say_hello.rs  set_song_time.rs  set_volume.rs  stop.rs
server/src/types/: mod.rs  mpv_handler.rs  speaker.rs
(+96 files in other folders)
