[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "postgres_backend"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
paperclip = { version = "0.8.2", features = ["actix4", "actix-files"] }
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
serde_json = "1.0.125"
