[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.33", features = ["serde"] }
cpal = "0.15.3"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "postgres_backend"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
env_logger = "0.11.5"
futures = "0.3.30"
libpulse-binding = "2.28.1"
log = "0.4.22"
paperclip = { version = "0.8.2", features = ["actix4", "actix-files"] }
pulsectl-rs = "0.3.2"
regex = "1.10.6"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
serde_json = "1.0.125"
